[package]
name = "s3-sync"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"

[features]
test-s3 = []

[dependencies]
rusoto_s3 = "0.40.0"
rusoto_core = "0.40.0"
log = "0.4.8"
itertools = "0.8.0"
ensure = "0.2.1"
either = "1.5.2"
futures = "0.1.28"
bytes = "0.4.12"
problem = "5.1.0"

[dev-dependencies]
assert_matches = "1.3.0"
