[package]
name = "s3-sync"
version = "0.1.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "High level synchronous S3 client"
repository = "https://github.com/jpastuszek/s3-sync"
documentation = "https://docs.rs/s3-sync"
readme = "README.md"
keywords = ["s3", "aws", "amazon"]
categories = ["web-programming"]
license = "MIT"
edition = "2018"

[dependencies]
rusoto_s3 = "0.42.0"
rusoto_core = "0.42.0"
log = "0.4.8"
itertools = "0.8.0"
ensure = "0.3.0"
either = "1.5.2"
futures = "0.1.28"
bytes = "0.4.12"
problem = "5.1.0"

[dev-dependencies]
assert_matches = "1.3.0"
